--- a/package.json
+++ b/package.json
@@ -62,6 +62,11 @@
       "title": "Enable MRU Tab Switching",
       "default": true,
       "description": "Enable tab switching in most-recently-used order. This setting has no effect if ctrl-tab or ctrl-shift-tab are already rebound via your keymap or another package."
+    },
+    "closeIconPositionLeft": {
+      "type": "boolean",
+      "default": false,
+      "description": "Display the close button on the left side of tabs."
     }
   },
   "devDependencies": {
